<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginRight="5dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/idnota"
                android:id="@+id/tv_idNota_tinto"
                />

        </LinearLayout>

        <View
            android:layout_width="5dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray"
            />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="MissingConstraints"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/usuario"
                android:textAlignment="center"
                android:layout_weight="1"
                android:id="@+id/tv_usuario_tinto"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fecha_recibido"
                android:layout_weight="1"
                android:id="@+id/tv_fechaRecibido_tinto"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fecha_entrega"
                android:layout_weight="1"
                android:id="@+id/tv_fechaEntrega_tinto"
                />

        </LinearLayout>

        <View
            android:layout_width="5dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            >

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:cardCornerRadius="30dp"
                app:cardElevation="4dp">

            <ImageButton
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:src="@drawable/baseline_arrow_downward_24"
                android:background="@null"
                android:scaleType="centerCrop"
                android:id="@+id/ib_recibido"
                />
        </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                app:cardCornerRadius="30dp"
                app:cardElevation="4dp">

                <ImageButton
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/baseline_auto_awesome_24"
                    android:background="@null"
                    android:layout_gravity="center"
                    android:scaleType="centerCrop"
                    android:enabled="false"
                    android:id="@+id/ib_proceso"
                    />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:cardCornerRadius="30dp"
                app:cardElevation="4dp">

                <ImageButton
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/baseline_arrow_upward_24"
                    android:background="@null"
                    android:layout_gravity="center"
                    android:scaleType="centerCrop"
                    android:enabled="false"
                    android:id="@+id/ib_listo"
                    />
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>